2005-12-27  Mark Kettenis  <kettenis@gnu.org>

	* sparcobsd-tdep.c: Include "gdbcore.h", "regcache.h" and
	"bsd-uthread.h".
	(SPARC32OBSD_UTHREAD_FP_OFFSET, SPARC32OBSD_UTHREAD_PC_OFFSET):
	New defines.
	(sparc32obsd_supply_uthread, sparc32obsd_collect_uthread): New
	functions.
	(sparc32obsd_init_abi): Set supply_uthread and collect_uthread.
	* Makefile.in (sparcobsd-tdep.o): Update dependencies.
	* config/sparc/obsd.mt (TDEPFILES): Add bsd-uthread.o.
	* config/sparc/obsd64.mt (TDEPFILES): Likewise.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elfread.c (elf_symfile_read): Don't make synth syms global.

2005-12-26  Mark Kettenis  <kettenis@gnu.org>

	* sparc64obsd-tdep.c: Include "obsd-tdep.h".
	(sparc64obsd_init_abi): Set skip_solib_resolver to
	obsd_skip_solib_resolver instead of find_solib_trampoline_target.
	* Makefile.in (sparc64obsd-tdep.o): Update dependencies.
	* config/sparc/obsd64.mt (TDEPFILES): Add obsd-tdep.o.

	* sparcobsd-tdep.c: Include "obsd-tdep.h".
	(sparc32obsd_init_abi): Set skip_solib_resolver.
	* Makefile.in (sparcobsd-tdep.o): Update dependencies.
	* config/sparc/obsd.mt (TDEPFILES): Add obsd-tdep.o.

	* obsd-tdep.c: New file.
	* obsd-tdep.h: New file.
	* Makefile.in (obsd_tdep_h): New variable.
	(ALLDEPFILES): Add obsd-tdep.c.
	(obsd-tdep.o): New target.

2005-12-23  Michael Snyder  <msnyder@redhat.com>

	* inf-ptrace.c: Spelling correction, comment.
	* inf-ttrace.c: Ditto.

2005-12-23  Eli Zaretskii  <eliz@gnu.org>

	* tui/tui-file.c: 
	* tui/tui-disasm.c: 
	* tui/tui-data.h: 
	* tui/tui-data.c: 
	* tui/tui-command.h: 
	* tui/tui-command.c: 
	* tui/tui-win.h: 
	* tui/tui-win.h: 
	* tui/tui-win.c: 
	* tui/tui-stack.h: 
	* tui/tui-stack.c: 
	* tui/tui-source.h: 
	* tui/tui-source.c: 
	* tui/tui-regs.h: 
	* tui/tui-regs.c: 
	* tui/tui-out.c: 
	* tui/tui-main.c: 
	* tui/tui-layout.h: 
	* tui/tui-layout.c: 
	* tui/tui-io.h: 
	* tui/tui-io.c: 
	* tui/tui-interp.c: 
	* tui/tui-hooks.h: 
	* tui/tui-hooks.c: 
	* tui/tui-file.h: 